# pose-estimation

./: gradle.properties  import-summary.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/betty/pose_estimation/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  pose_estimation.cpp
app/src/main/java/com/example/betty/pose_estimation/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/betty/pose_estimation/: ExampleUnitTest.java
